--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     flex-direction: column;
 }
 
-button {
+.buttons button {
     padding: 1rem 2rem;
 }
 
@@ -94,4 +94,66 @@ td:last-child {
 thead .delete,
 tfoot .delete {
     visibility: hidden;
+}
+
+.modal {
+    visibility: hidden;
+    align-self: center;
+    justify-self: center;
+    background-color: lightgray;
+    padding: 1rem;
+    outline: thick solid slategray;
+    position: absolute;
+    top: 30%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+}
+
+form button {
+    font-weight: bold;
+    font-size: larger;
+}
+
+#closeForm {
+    align-self: end;
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+#ok {
+    padding: 0.5rem 2rem;
+}
+
+fieldset {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 0.5rem;
+}
+
+fieldset>div {
+    font-size: larger;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+input {
+    width: 55ch;
+}
+
+fieldset>div:last-child {
+    align-self: center;
+}
+
+input[type="checkbox"] {
+    height: 1rem;
+    width: 1rem;
 }
