--- a/styles.css
+++ b/styles.css
@@ -21,33 +21,48 @@ body * {
 }
 
 body {
-    padding: 16px;
+    padding: 2rem;
     background-color: lightgray;
 
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
-.buttons button {
-    padding: 1rem 2rem;
+input {
+    width: 55ch;
+}
+
+input[type="checkbox"] {
+    height: 1rem;
+    width: 1rem;
 }
 
 /* i want the initial content centered, but there is a problem with justify-content: center; */
-/* when the content grows and scroling is added, the start get cliped off */
-/* using auto margin on the flex items centers them without stuff breaking */
+/* when the content grows and scroling is added, the start gets cliped off */
+/* using auto margin on the flex items centers them without clipping */
 /* align-items: center; seems to work fine, just doing both with margin for consistancy */
 .buttons {
     margin: auto;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
 
     display: flex;
-    justify-content: space-between;
-    gap: 3rem;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 1rem;
 }
 
-body>table {
+table {
+    margin: 0 auto;
+}
+
+.foot {
     margin: auto;
     margin-top: 0;
+}
+
+.buttons button {
+    padding: 1rem 1rem;
 }
 
 thead,
@@ -56,10 +71,13 @@ tfoot {
     font-size: larger;
 }
 
+/* alternating row color in place of borders*/
 tbody tr:nth-child(2n) {
     background-color: rgb(190, 190, 190);
 }
 
+/* TODO: don't know if this is legit, kind of overides the table-layout */
+/* but, grid gives me what I want so i'm using it */
 tr {
     display: grid;
     grid-template-columns: 3rem 8fr 4fr 4rem 1fr max-content;
@@ -71,6 +89,7 @@ td {
     text-align: start;
 }
 
+/* hide the last column so the delete buttons  */
 th:last-child,
 td:last-child {
     background-color: lightgray;
@@ -145,15 +164,7 @@ fieldset>div {
     align-items: center;
 }
 
-input {
-    width: 55ch;
-}
-
 fieldset>div:last-child {
     align-self: center;
 }
 
-input[type="checkbox"] {
-    height: 1rem;
-    width: 1rem;
-}
